getposition works
