# jobfinder-exercise-business/src/main/java/hu/feladat/spring/controller/PositionController.java
@@ -6,6 +6,7 @@ import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import hu.feladat.spring.model.Position;
 import hu.feladat.spring.service.PositionService;
 import hu.spring.feladat.openapi.api.PositionApi;
 
@@ -21,11 +22,20 @@ public class PositionController implements PositionApi {
 	}
 
 	@Override
-	public ResponseEntity<String> savePosition(String title,
-			 String place) {
-		return ResponseEntity.ok().body(ServletUriComponentsBuilder.fromCurrentContextPath() +"/position/"+service.savePosition(title, place).getId());
+	public ResponseEntity<String> savePosition(String title, String place) {
+		return ResponseEntity.ok().body(ServletUriComponentsBuilder.fromCurrentContextPath().build().toUriString()
+				+ "/position/" + service.savePosition(title, place).getId());
 	}
-	
-	
+
+	@Override
+	public ResponseEntity<hu.spring.feladat.openapi.model.Position> getPosition(Integer id) {
+		Position dbPosition = service.getPosiion(id);
+		hu.spring.feladat.openapi.model.Position position = new hu.spring.feladat.openapi.model.Position();
+		position.setId(dbPosition.getId());
+		position.setTitle(dbPosition.getTitle());
+		position.setPlace(dbPosition.getPlace());
+		return ResponseEntity.ok().body(position);
+
+	}
 
 }
