# jobfinder-exercise-ui/src/app/app.component.ts
@@ -1,5 +1,6 @@
 import { Component } from '@angular/core';
-import { ClientService, PositionService } from './core/api/v1';
+import { ClientService, PositionService, ClientResponse } from './core/api/v1';
+import { AuthService } from './auth.service';
 
 @Component({
 	selector: 'app-root',
@@ -19,10 +20,26 @@ export class AppComponent {
 
 	// Create a `cold` observable - we will be subscribing to this observable in the template
 	bad_email$ = this.clientService.createClient("testname", "aaa");
+	
+	position1: any;
 
 	// Inject the generated Angular service as a dependency of this class
-	constructor(private clientService: ClientService, private positionService: PositionService) { }
+	constructor(private clientService: ClientService, private positionService: PositionService, private authService: AuthService) { }
 
+	ngOnInit() {
+		console.log("component has been initialized!")
+		
+		this.clientService.createClient("api_in_onint", "use@this.hu").subscribe((results: ClientResponse) => {
+			
+			this.authService.apikey = results.apikey;
+			
+			this.positionService.getPosition(1).subscribe((ret: any) => {
+				console.log("ret:" + ret);
+				this.position1 = ret;
+			})
+		})
+		
+	}
 
 	onCreatePosition() {
 		console.log('onCreatePosition()');
