# jobfinder-exercise-ui/src/app/core/api/v1/model/models.ts
@@ -1,2 +1,3 @@
 export * from './clientResponse';
 export * from './modelError';
+export * from './position';
